--- a/Day 2 & 3 /style.css
+++ b/Day 2 & 3 /style.css
@@ -22,3 +22,44 @@ p {
 h1, h2, p {
   font-family: Arial, sans-serif;
 }
+
+     /* Colors */
+
+
+body {
+  background-color: #f5f5f5; /* Light gray */
+}
+
+h1 {
+  color: rgb(255, 0, 0); /* Red */
+}
+
+p {
+  color: hsl(200, 100%, 40%); /* Blue shade */
+}
+
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
